tests/snapshots/examples_fixtures/base__BaseExamples__ExceptInModule.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/BaseExamples/ExceptInModule.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `BaseExamples.ExceptInModule` doesn't match file path `examples/base/BaseExamples/ExceptInModule.flx`.

  --> examples/base/BaseExamples/ExceptInModule.flx:3:1
  |
3 | module BaseExamples.ExceptInModule {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
